<resources>
    <string name="app_name">TFG_Championship_studio</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_sign_out">Sign Out</string>

    <string name="menu_gest_participantes">Gestión de Participantes</string>
    <string name="menu_mis_torneos">Mis Torneos</string>
    <string name="menu_ajustes">Ajustes</string>

    <string name="app_title">Championship Studio</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="google_desc">Google login</string>
    <string name="facebook_desc">Facebook login</string>
    <string name="twitter_desc">Twitter login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="re_password">Re-Password</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_sign_up">SIGN UP</string>
    <string name="txt_below_login">login with</string>
    <string name="txt_below_sign_up">or sign up with</string>

    <string name="item_torneo_state">Estado:</string>
    <string name="item_torneo_icon_desc">Tournament Type Icon</string>
    <string name="item_torneo_edit_button">GESTIONAR</string>
    <string name="item_torneo_delete_button">ELIMINAR</string>
    <string name="item_torneo_config_button">CONFIGURAR</string>


    <string name="item_jugador_edit_button">EDITAR</string>
    <string name="item_jugador_delete_button">ELIMINAR</string>
    <string name="item_jugador_name">Nombre del jugador</string>
    <string name="item_team_name">Nombre del Equipo</string>
    <string name="item_team_add_jugador">AÑADIR</string>

    <string name="new_tournament_dialog_input">Nombre del campeonato</string>
    <string name="new_tournament_dialog_title">CREAR NUEVO TORNEO</string>
    <string name="new_tournament_dialog_btn_acept">ACEPTAR</string>
    <string name="new_tournament_dialog_btn_cancel">CANCELAR</string>

    <string name="fragment_mis_torneos_descr">Botón de añadir torneo</string>

    <string name="fragment_gest_participantes_descr">Botón de añadir equipo / jugador</string>
    <string name="fragment_gest_participantes_players">JUGADORES</string>
    <string name="fragment_gest_participantes_teams">EQUIPOS</string>

    <string name="new_players_teams_dialog_input">Nombre</string>
    <string name="new_players_teams_dialog_btn_acept">ACEPTAR</string>
    <string name="new_players_teams_dialog_btn_cancel">CANCELAR</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="fragment_equipos_message">Participantes restantes por añadir:</string>
    <string name="fragment_equipos_btn_añadir_participante">AÑADIR PARTICIPANTE</string>
    <string name="fragment_equipos_btn_generar_partidos">GENERAR PARTIDOS</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_dialog_new_participante">Escribe el nombre del participante</string>

    <string name="item_bracket_btn_win">GANADOR</string>




</resources>